src/test/deca/context/invalid/operation-unaire-not-wrong.deca
// Description:
//    Test 3.37 fail avec not 
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : A not is only followed by a boolean (rule 3.37)
//
// Historique:
//    cree le 06/01/2023

{
    !"hello world";
}